--- a/WebContent/views/web/main.zul
+++ b/WebContent/views/web/main.zul
@@ -167,8 +167,9 @@
 			      	</div>
 			    </n:div>
 			    <n:div id="twitter">
-			      	<div class="col s7">
-			      		<image class="img-responsive" src="/imagenes/portal/twitter-timeline.png" style="height: 368px; width: 727px;"></image>
+			      	<div class="col s7 text-center">
+
+			      	<n:a class="twitter-timeline hola" data-width="500" data-height="400" href="https://twitter.com/fancalara"></n:a>
 			      	</div>
 		      	</n:div> 	
 			</div>
@@ -377,6 +378,7 @@
 			</n:div>
 		</div> 	
 	</div>
+	<n:script src="http://platform.twitter.com/widgets.js" charset="utf-8"></n:script>
 	
 	<n:script type="text/javascript">
 		$(document).ready(function() {
