actualizacion eventos fidel

--- a/WebContent/assets/css/web/eventos.css
+++ b/WebContent/assets/css/web/eventos.css
@@ -1,59 +1,199 @@
-.cinta {
-	background-color: #F26B7A;
-	height: 10px;
+.eventos {
+	background-image: url("/SmileWebApp/imagenes/portal/fondo.png");
 }
 
-.titulo {
+.cinta {
+	background-color: #8AC7DE;
+	height: 40px;
+	margin-bottom: 25px;
+}
+
+.tituloCinta {
 	text-transform: uppercase;
+	color: #fff;
+	font-size: 16px;
+}
+
+.eventos .titulo {
 	color: #F26B7A;
+	font-size: 18px;
 	margin-bottom: 30px;
 }
 
-.cabecera {
-	Background-color: #3B85A1;
-	color: white; 
-	text-transform: uppercase;
+.eventos td, th {
+	padding: 0;
 }
 
-.imagen {
-	background-color: #F0F2DC;
-}
-
-.fc-content{
-	background: #fff;
-}
-
-.fc-header-center{
- color: #fff;
-}
-
-.fc-button-next{
-	background: transparent !important;
-    float: right;
-    color: #fff !important;
-}
-
-.fc-button-prev{
-	background: transparent !important;
+.view {
+    width: 300px;
+    height: 200px;
     float: left;
-    color: #fff !important;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    box-shadow: 1px 1px 2px #e6e6e6;
+    cursor: default;
 }
 
-.fc-text-arrow {
-    margin: 0;
-    font-size: 24px;
-    line-height: 18px;
-    }
-    
-    .fc-day-header {
+.view .mask, .view .content {
+    width: 300px;
+    height: 200px;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+}
+
+.view img {
+    display: block;
+    position: relative;
+}
+
+.view h2 {
     text-transform: uppercase;
-    font-size: 14px;
-    background:rgb(193, 190, 190);
-    color: #366fa0;
-    font-weight: 500;
-    border: none !important;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    padding: 10px;
+    background: hsla(0,0%,0%,0.8);
+    margin: 20px 0 0 0;
 }
 
-thead tr.fc-first{
-	border: none !important;
+.view p {
+    font-size: 12px;
+    position: relative;
+    color: #fff;
+    padding: 10px 20px 20px;
+    text-align: center;
+}
+
+.view a.info {
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px 14px;
+    background: #F26B7A;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.view a.info:hover {
+    box-shadow: 0 0 5px #000;
+}
+
+.view img {
+    -webkit-transition: all 0.2s ease-in;
+    -moz-transition: all 0.2s ease-in;
+    -o-transition: all 0.2s ease-in;
+    -ms-transition: all 0.2s ease-in;
+    transition: all 0.2s ease-in;
+}
+
+.view .mask {
+    opacity: 0;
+    width: 300px;
+    padding: 0;
+    height: 300px;
+    background-color: rgba(135,121,111,0.7);
+/*     background-color: hsla(213,33%,59%,0.7); */
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    -webkit-transform: translate(265px, 145px) rotate(45deg);
+    -moz-transform: translate(265px, 145px) rotate(45deg);
+    -o-transform: translate(265px, 145px) rotate(45deg);
+    -ms-transform: translate(265px, 145px) rotate(45deg);
+    transform: translate(265px, 145px) rotate(45deg);
+}
+
+.view h2 {
+/*     border-bottom: 1px solid rgba(0, 0, 0, 0.3); */
+    background: transparent;
+    margin: 20px 40px 0px 40px;
+    -webkit-transform: translate(200px, -200px);
+    -moz-transform: translate(200px, -200px);
+    -o-transform: translate(200px, -200px);
+    -ms-transform: translate(200px, -200px);
+    transform: translate(200px, -200px);
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+.view p { 
+    -webkit-transform: translate(-200px, 200px);
+    -moz-transform: translate(-200px, 200px);
+    -o-transform: translate(-200px, 200px);
+    -ms-transform: translate(-200px, 200px);
+    transform: translate(-200px, 200px);
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -ms-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+.view a.info {
+    -webkit-transform: translate(0px, 100px);
+    -moz-transform: translate(0px, 100px);
+    -o-transform: translate(0px, 100px);
+    -ms-transform: translate(0px, 100px);
+    transform: translate(0px, 100px);
+    -webkit-transition: all 0.2s 0.1s ease-in-out;
+    -moz-transition: all 0.2s 0.1s ease-in-out;
+    -o-transition: all 0.2s 0.1s ease-in-out;
+    -ms-transition: all 0.2s 0.1s ease-in-out;
+    transition: all 0.2s 0.1s ease-in-out;
+}
+
+.view:hover .mask { 
+    opacity: 1;
+    -webkit-transform: translate(0px, -100px) ;
+    -moz-transform: translate(0px, -100px) ;
+    -o-transform: translate(0px, -100px) ;
+    -ms-transform: translate(0px, -100px) ;
+    transform: translate(0px, -100px) ;
+}
+
+.view:hover h2 { 
+    -webkit-transform: translate(0px,0px);
+    -moz-transform: translate(0px,0px);
+    -o-transform: translate(0px,0px);
+    -ms-transform: translate(0px,0px);
+    transform: translate(0px,0px);
+    -webkit-transition-delay: 0.3s;
+    -moz-transition-delay: 0.3s;
+    -o-transition-delay: 0.3s;
+    -ms-transition-delay: 0.3s;
+    transition-delay: 0.3s;
+}
+
+.view:hover p {
+    -webkit-transform: translate(0px,0px);
+    -moz-transform: translate(0px,0px);
+    -o-transform: translate(0px,0px);
+    -ms-transform: translate(0px,0px);
+    transform: translate(0px,0px); 
+    -webkit-transition-delay: 0.4s;
+    -moz-transition-delay: 0.4s;
+    -o-transition-delay: 0.4s;
+    -ms-transition-delay: 0.4s;
+    transition-delay: 0.4s;
+}
+
+.view:hover a.info {
+    -webkit-transform: translate(0px,0px);
+    -moz-transform: translate(0px,0px);
+    -o-transform: translate(0px,0px);
+    -ms-transform: translate(0px,0px);
+    transform: translate(0px,0px); 
+    -webkit-transition-delay: 0.5s;
+    -moz-transition-delay: 0.5s;
+    -o-transition-delay: 0.5s;
+    -ms-transition-delay: 0.5s;
+    transition-delay: 0.5s;
 }
