--- a/WebContent/assets/css/web/contactanos.css
+++ b/WebContent/assets/css/web/contactanos.css
@@ -1,21 +1,21 @@
-body {
+.contactanos {
 	background-color: #594e46;
 }
 
-.contact-map {
+.contactanos .contact-map {
 	max-width: 100%;
 	width: 1680px;
 	height: 465px;
 	padding-top: 0px;
 }
 
-.banner-organizacion {
+.contactanos .banner-organizacion {
 	height: 200px;
 	width: 100%;
 	position: relative !important;
 }
 
-.org-contenedor-contenido {
+.contactanos .org-contenedor-contenido {
 	z-index: 2;
 	top: 33em;
 	-webkit-box-shadow: 0 0 1px #999;
@@ -25,27 +25,27 @@ body {
 	background: #F0F2DC !important;
 }
 
-.org-contenedor-banner {
+.contactanos .org-contenedor-banner {
 	position: absolute;
 	width: 100%;
 	height: 708px;
 	background-repeat: no-repeat;
 }
 
-.banner-organizacion {
+.contactanos .banner-organizacion {
 	height: 200px;
 	width: 100%;
 	position: relative !important;
 }
 
-.org-contenedor-banner {
+.contactanos .org-contenedor-banner {
 	position: absolute;
 	width: 100%;
 	height: 708px;
 	background-repeat: no-repeat;
 }
 
-.org-contenedor-texto {
+.contactanos .org-contenedor-texto {
 	position: relative;
 	width: 100%;
 	max-width: 100%;
@@ -55,55 +55,55 @@ body {
 	text-align: center;
 }
 
-.org-sub-bold {
+.contactanos .org-sub-bold {
 	font-weight: bold;
 }
 
-.banner-organizacion {
+.contactanos .banner-organizacion {
 	height: 310px;
 	width: 100%;
 	position: relative !important;
 }
 
-.org-contenedor-banner>img {
+.contactanos .org-contenedor-banner>img {
 	max-width: 1354px;
 }
 
-.org-contenedor-banner-img {
+.contactanos .org-contenedor-banner-img {
 	z-index: -1;
 }
 
-.tituloSeccion {
+.contactanos .tituloSeccion {
 	background: #F26B7A !important;
 	padding: 0px 10px;
 	height: 48px;
 }
 
-.tituloSeccion span {
+.contactanos .tituloSeccion span {
 	color: #F0F2DC;
 	font-size: 20px !important;
 }
 
-.textoContacto {
+.contactanos .textoContacto {
 	font-family: 'Roboto', sans-serif;
 	font-size: 15px !important;
 	font-weight: 500;
 	color: #87796F;
 }
 
-.textoDatos {
+.contactanos .textoDatos {
 	color: #594E46;
 }
 
-.input-field label {
+.contactanos .input-field label {
      color: #594E46;
 }
 
-.input-field input[type=text] {
+.contactanos .input-field input[type=text] {
      border-bottom: 1px solid #8AC7DE;
 }
 
-.input-field input[type=text]:focus {
+.contactanos .input-field input[type=text]:focus {
      border-bottom: 1px solid #8AC7DE;
 }
 
@@ -122,7 +122,7 @@ body {
 	margin: 0px auto 35px auto;
 }
 
-.containerRedes {
+.contactanos .containerRedes {
 	color: white;
 	height: 45px;
 	width: 270px;
@@ -130,6 +130,6 @@ body {
 	padding-left: 15px;
 }
 
-.cont {
+.contactanos .cont {
 	margin-top: -140px;
 }
