--- a/WebContent/views/web/galeria.zul
+++ b/WebContent/views/web/galeria.zul
@@ -1,10 +1,8 @@
 <zk xmlns:n="native" xmlns:w="client">
 <n:link href="assets/css/web/galeria.css" rel="stylesheet" type="text/css"></n:link>
 
-		<div sclass="row" apply="org.zkoss.bind.BindComposer"
+		<div class="container-fluid galeria" apply="org.zkoss.bind.BindComposer"
 		viewModel="@id('vm') @init('ve.smile.web.viewmodels.VM_Main')">
-
-		<div class="container-fluid galeria">
 			<n:h4>fotos</n:h4>
 			<n:div id="fotos">
 				<div class="col s12 seccion">
@@ -108,7 +106,6 @@
 					</div>		
 				</div>
 			</n:div>
-		</div>
 		
 		</div>
 		
