--- a/WebContent/views/desktop/maestro/main/ClasificadorEventoIndex.zul
+++ b/WebContent/views/desktop/maestro/main/ClasificadorEventoIndex.zul
@@ -7,7 +7,7 @@
 		<div class="row">
 			<div class="col s12">
 				<div class="col s12">
-					<listbox id="lstbox"
+					<listbox id="listbox"
 						model="@load(vm.objectsList)"
 						selectedItem="@bind(vm.selectedObject)">
 
