--- a/WebContent/views/desktop/maestro/main/CapacitacionIndex.zul
+++ b/WebContent/views/desktop/maestro/main/CapacitacionIndex.zul
@@ -2,7 +2,7 @@
 	<div width="100%" class='opacity-0'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPClasificadorEvento')">
+		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPCapacitacion')">
 
 		<div class="row">
 			<div class="col s12">
