--- a/WebContent/views/desktop/maestro/main/ClasificadorPreguntaIndex.zul
+++ b/WebContent/views/desktop/maestro/main/ClasificadorPreguntaIndex.zul
@@ -2,7 +2,7 @@
 	<div width="100%" class='opacity-0'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPClasificadorEvento')">
+		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPClasificadorPregunta')">
 
 		<div class="row">
 			<div class="col s12">
@@ -12,17 +12,15 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
-							<listheader width="50%" label="Nombre" />
-							<listheader width="50%" label="Descripcion" />
+							<listheader width="100%" label="Nombre" />
 						</listhead>
 						<template name="model">
 							<listitem>
 								<listcell label="@load(each.nombre)" />
-								<listcell label="@load(each.descripcion)" />
 							</listitem>
 						</template>
 						<listfoot>
-							<listfooter id="listFoot" span="2"
+							<listfooter id="listFoot" span="1"
 								use="karen.core.listfoot.ListFoot">
 							</listfooter>
 						</listfoot>
