--- a/WebContent/views/desktop/maestro/main/PreguntaIndex.zul
+++ b/WebContent/views/desktop/maestro/main/PreguntaIndex.zul
@@ -2,7 +2,7 @@
 	<div width="100%" class='opacity-0'
 		use="karen.core.simple_list_principal.controllers.C_WindowSimpleListPrincipal"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPClasificadorEvento')">
+		viewModel="@id('vm') @init('ve.smile.viewmodels.main.VMPPregunta')">
 
 		<div class="row">
 			<div class="col s12">
@@ -12,13 +12,13 @@
 						selectedItem="@bind(vm.selectedObject)">
 
 						<listhead sizable="true">
-							<listheader width="50%" label="Nombre" />
-							<listheader width="50%" label="Descripcion" />
+							<listheader width="50%" label="Titulo" />
+							<listheader width="50%" label="Contenido" />
 						</listhead>
 						<template name="model">
 							<listitem>
-								<listcell label="@load(each.nombre)" />
-								<listcell label="@load(each.descripcion)" />
+								<listcell label="@load(each.titulo)" />
+								<listcell label="@load(each.contenido)" />
 							</listitem>
 						</template>
 						<listfoot>
